@@ -159,3 +159,5 @@ DOT_TRANSPARENT=YES
 DOT_MULTI_TARGETS=YES
 GENERATE_LEGEND=YES
 DOT_CLEANUP=YES
+HTML_HEADER=
+HTML_OUTPUT            = html
